# Freebuds-Controller

./: README.md  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  native-lib.cpp
android/app/src/main/cpp/core/: command_writer.cpp  command_writer.h  device.cpp  device.h
android/app/src/main/cpp/platform/: bluetooth_interface.h
android/app/src/main/cpp/platform/android/: bluetooth_spp_client_android.cpp  bluetooth_spp_client_android.h
android/app/src/main/cpp/platform/windows/: bluetooth_spp_client.cpp  bluetooth_spp_client.h  device_discovery.cpp  device_discovery.h
android/app/src/main/cpp/protocol/: crc16.cpp  crc16.h  huawei_commands.h  huawei_packet.h
android/app/src/main/kotlin/com/example/freebuds_flutter/: BluetoothManager.kt  MainActivity.kt
cpp_core/: CMakeLists.txt
cpp_core/core/: command_writer.cpp  command_writer.h  debug_log.h  device.cpp  device.h  export.h  thread_safe_queue.h  types.h
cpp_core/platform/windows/: bluetooth_spp_client.cpp  bluetooth_spp_client.h
cpp_core/protocol/: huawei_packet.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: dual_connect_page.dart  eq_editor_page.dart  equalizer_page.dart  gesture_settings_page.dart  main.dart  platform_services.dart  platform_services_desktop.dart  platform_services_mobile.dart  settings_page.dart
lib/services/: freebuds_service.dart  theme_service.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/native_src/: export.def  ffi_bridge.cpp
windows/runner/: Runner.rc  main.cpp
